--- a/public/css/open-secrets-data-for-wp-public.css
+++ b/public/css/open-secrets-data-for-wp-public.css
@@ -2,3 +2,17 @@
  * All of the CSS for your public-facing functionality should be
  * included in this file.
  */
+
+table.op-data-table tr th {
+    text-align: left;
+    background-color: wheat;
+    color: red;
+}
+/* Stripes */
+table.op-data-table tr:nth-child(2n+1) {
+    background-color: #f1f1f1;
+}
+/* Dollar amounts align to the right. */
+.op-data-table tbody tr td:not(:first-child) {
+    text-align: right;
+}
