--- a/public/css/open-secrets-data-for-wp-public.css
+++ b/public/css/open-secrets-data-for-wp-public.css
@@ -5,8 +5,8 @@
 
 table.op-data-table tr th {
     text-align: left;
-    background-color: wheat;
-    color: red;
+    background-color: #999999;
+    color: #FFFFFF;
 }
 /* Stripes */
 table.op-data-table tr:nth-child(2n+1) {
