Remove default styles.

--- a/public/css/open-secrets-data-for-wp-public.css
+++ b/public/css/open-secrets-data-for-wp-public.css
@@ -4,15 +4,15 @@
  */
 
 table.op-data-table tr th {
-    text-align: left;
-    background-color: #999999;
-    color: #FFFFFF;
+    /*text-align: left;*/
+    /*background-color: #999999;*/
+    /*color: #FFFFFF;*/
 }
 /* Stripes */
 table.op-data-table tr:nth-child(2n+1) {
-    background-color: #f1f1f1;
+    /*background-color: #f1f1f1;*/
 }
 /* Dollar amounts align to the right. */
 .op-data-table tbody tr td:not(:first-child) {
-    text-align: right;
+    /*text-align: right;*/
 }
