Added plugin configuration.

--- a/admin/css/open-secrets-data-for-wp-admin.css
+++ b/admin/css/open-secrets-data-for-wp-admin.css
@@ -2,3 +2,33 @@
  * All of the CSS for your admin-specific functionality should be
  * included in this file.
  */
+
+ #wpbody-content section {
+    padding: .5rem 1rem;
+}
+#wpbody-content section form fieldset label {
+    display: block;
+    font-size: 1rem;
+    margin: .25rem 0;
+    margin: .25rem 0;
+}
+#wpbody-content section form fieldset p {
+    font-size: 1rem;
+    margin: .25rem 0;
+}
+#wpbody-content section form fieldset input[type="text"],
+#wpbody-content section form fieldset input[type="number"] {
+    margin-bottom: .5rem;
+    width: 20rem;
+}
+#wpbody-content section form fieldset input[type="radio"] + label {
+    display: inline-block;
+    margin-right: 1.5rem;
+}
+#wpbody-content section form fieldset input[type="submit"] {
+    display: block;
+    padding: .25rem 2rem;
+    font-size: 1rem;
+    text-transform: uppercase;
+    margin-top: 1rem;
+}
